Edited wiki page through web user interface.

--- a/wiki/GeneralGuide.wiki
+++ b/wiki/GeneralGuide.wiki
@@ -3,7 +3,7 @@
 
 == Svn Folder Structure ==
 
-Description of the folders in this repository.
+Short description of the folders in this repository.
 
 */projects* - Root folder for the projects.
 
