--- a/wiki/StartingSomething.wiki
+++ b/wiki/StartingSomething.wiki
@@ -27,9 +27,9 @@
   * Can be downloaded from here: [http://www.netbeans.org/downloads/index.html Netbeans]
   * The Java SE version is enough.
 
-*Installing Subversion binaries (if not present)*
+*Associte Subversion binaries in Netbeans*
 
   * Netbeans already has built-in support for Subversion through plugins, but the plugin might not be up-to-date. This can cause problems, as when Subversion went from version 1.5 to 1.6 (Netbeans couldn't execute subversion commands with 1.6 projects).
-  * Download binaries for Subversion. For Windows, last link in this page is fine: [http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=8100 Windows Apache Subversion]
+  * If not present, download binaries for Subversion. For Windows, last link in this page is fine: [http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=8100 Windows Apache Subversion]. Unzip them to a folder (ex.: C:\Program Files\Subversion X.Y\).
 
 ==Creating a Netbeans library==
