Edited wiki page through web user interface.

--- a/wiki/StartingSomething.wiki
+++ b/wiki/StartingSomething.wiki
@@ -53,6 +53,7 @@
   * Inside Project Properties: It seems that Netbeans, when using relative paths, doesn't choose the right Libraries folder when creating a new project. A way to quickly check is to click on "Add Library...". If it only appears three libraries (for JUnit and CopyLibs), choose "Browse..." next to "Libraries Folder" and point to the correct folder (/support/netbeans/libInfo).
   * Inside Project Properties: If the project will have a Main class, in "Run->Working Directory" choose "/projects/Projectname/trunk/run".
   * In "Projects" view, right-click in the project and choose "Subversion->Commit...". Write something meaningful as Commit Message (ex.: Netbeans project structure for project Projectname) and click "Commit". Enter your username and password if necessary (you can see your code.google password here: [http://code.google.com/hosting/settings]).
+  * If the folder "/projects/Projectname/trunk/run" was created, it needs to be commited manually (ex.: in Windows with TortoiseSVN, right-click in the folder "run" and choose "Commit..."). 
 
 
 
